v0.13
	* FIX : Insufficent precision for WMS bbox requests at high zoom (fixes #1618)
	* ADD : Allow to force the custom Qt style thru Config.pri
	* FIX : Do not remove incomplete downloaded relation; make them readonly and display them in red (temporary)
	* FIX : Painting slowdowns (+ memory consumption) when relations are involved (fixes #1528)
	* FIX : Splitted roads not added to Relation (fixes #1586)
	* FIX : Tweaked windows menu to be "standard"
	* ADD : Splash screen
	* ADD : Styles dock + list of styles in "Tools-Styles" for quick style switching. As a consequence, a directory must be defined in the preferences where all custom styles will be stored.
	* ADD : Add a button to the Slippy map allowing to go to the current viewport.
	* ADD : Outline coastlines
	* ADD : Include build of translations during make
	* ADD : Use a builtin shapefile of the world as a background 
	* ADD : Support for ESRI shapefile import (and, potentially, every GDAL supported file formats) via the GDAL library
	* FIX : Bugs when loading MDC history (fixes #1546)
	* ADD : Readonly layers + Preferences to default track layers to readonly (fixes #1460)
	* FIX : Make upload dialog modal
	* ADD : Initial support for multiple projections via proj4. Enable in Config.pri with PROJ=1
	* FIX : Crash during OSM import (fixes #1536)
	* ADD : Option (in Manager) to autoload/autoshow the World
	* FIX : Implement dynamic UI translation (fixes #1432)
	* ADD : Generalize the concept of download progress window
	* FIX : If one of the translation composant (Qt or Merkaartor) is missing, allow the other to be loaded.
	* FIX : Add missing tr() calls in render dialogs.
	* FIX : Messagebox-Cancel after deleting a line did not work (fixes #1392)
	* ADD : Native SVG renderer
	* ADD : Allow to break roads (and areas) with a single node (fixes #1505)
	* ADD : Relation member context menu for center and zoom on the properties
	dock
	* ADD : Allow to remove a member from a relation thru the properties dock.